# ibkr-trader

./: .env.example  .gitignore  AGENT.md  AGENTS.md  README.md  TODO.md  agnet.md  plan.md  pyproject.toml  test.py
dashboard/: README.md  package-lock.json  package.json  vite.config.js
docs/: architecture.md  client-id-policy.md  current-status.md  ib-gateway-setup.md  ibkr-api-choice.md  ibkr-broker-usage-rewrite.md  instruction-contract.md  local-api.md  rl-operational-readiness.md  rl-setup.md  virtual-trading.md
examples/: sive-market-buy-1-take-profit-5pct.json
scripts/: bootstrap_rl_registry.py  check_operational_readiness.py  run_rl_agents.py  submit_rl_candidate_lists.py
tests/: test_api_server.py  test_broker_monitor.py  test_client_ids.py  test_config.py  test_db_schema.py  test_entry_submission.py  test_gateway_diagnostics.py  test_ibkr_account_summary.py  test_ibkr_contracts.py  test_ibkr_historical_bars.py  test_ibkr_probe.py  test_instruction_model.py  test_instruction_status.py  test_intent_replacement.py  test_ledger_dashboard.py  test_ledger_persistence.py  test_market_data_backfill.py  test_market_stream.py  test_market_stream_store.py  test_operational_readiness.py  test_operator_controls.py  test_operator_dashboard.py  test_operator_reviews.py  test_order_execution.py  test_order_preview.py  test_pacing.py  test_persistent_execution_runtime.py  test_rl_action_translation.py  test_rl_bootstrap_registry.py  test_rl_candidate_rollover.py  test_rl_candidate_submitter.py  test_rl_dashboard.py  test_rl_inference_vector.py  test_rl_model_artifacts.py  (+16 more)
(+100 files in other folders)
