[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ibkr-trader"
version = "0.1.0"
description = "Professional quant trading system scaffold for Interactive Brokers."
readme = "README.md"
requires-python = ">=3.12"
authors = [
  { name = "maxilirator" }
]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.5",
]
db = [
  "SQLAlchemy>=2.0",
  "psycopg[binary]>=3.2",
]
server = [
  "fastapi",
  "uvicorn",
  "pandas",
  "pyarrow",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
